# rust-spfresh

./: .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  SPFRESH_INTEGRATION.md  add-mock-reviews.bat  build_persistent_spfresh.sh  build_spfresh_integration.sh  build_windows.bat  clean-for-prod.bat  clean-for-prod.sh  create_persistent_spfresh.sh  deploy-production.sh  docker-compose.yml  load_sample_data.bat  quick-update.bat  rust-spfresh.md  setup-and-test.bat  setup-leptos-frontend.bat  start-backend.bat  start-both-servers.bat  start-frontend.bat  start-leptos-frontend.bat  test-brd-compliance.bat  test_backend.bat  test_spfresh_integration.sh  upload-to-github.bat
SPFresh-main/: CMakeLists_c_api.txt  build_c_api.sh  build_docker.sh  persistent_spfresh_wrapper.cpp  spfresh_c_api.cpp  spfresh_c_api.h
backend/: Cargo.toml  Dockerfile  build.rs
backend/data/: README.md  reviews.index  reviews.jsonl  sample_reviews.jsonl  spfresh_reviews.jsonl
backend/spfresh/: README.md
backend/src/: fastembed_service.rs  handlers.rs  main.rs  models.rs  spfresh_bindings.rs  spfresh_vector_store.rs  tests.rs  vector_store.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
frontend-simple/: index.html  server.py  start-frontend.bat
frontend/src/: api.rs  app.rs  lib.rs  main.rs  models.rs  pages.rs  pages_new.rs
