[package]
name = "review-search-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.4", features = ["http"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
ssr = ["dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
